--- a/snowfloke.com/index.html
+++ b/snowfloke.com/index.html
@@ -45,6 +45,7 @@
         </article>
         <footer> 
             <h6>Direitos autorais dos ícones usados não pertencem a mim.</h6>
+            <h6>Esse site é 100% open-source, se você deseja contribuir para ele clique <a href="https://github.com/snowyfloke/snowfloke.com">aqui!</a></h6>
             <h6>&lt;&lt;&lt; <a href="https://snowfloke.com">Snowy</a> &checkmark; todos os direitos reservados &gt;&gt;&gt;</h6>
         </footer>
     </body>
